# brave

./: .gitignore  Dockerfile  pyproject.toml
brave/: cli.py  inputoutputoverlay.py
brave/api/: __init__.py  route_handler.py
brave/connections/: connection.py  connection_to_mixer.py
brave/inputs/: html.py
brave/outputs/: file.py  local.py  output.py  rtmp.py  tcp.py  webrtc.py
config/: dorftest.yml
